1.04 (july 30, 2007)

  - Amazon list_backups and delete backups (and delete for filesystem
    target too), from Alessandro Ranellucci <aar@cpan.org>

  - make tests pass on OS X (Jesse Vincent)

1.03 (may 23, 2007)

  - brackup-restore's verbose flag is more verbose now, showing files
    as they're restored.

  - brackup-restore can restore from an encrypted *.brackup file now,
    firing up gpg for user to decrypt to a tempfile

  - brackup-target tool, to list/get brackup files from a target,
    and in the future do garbage collection on no-longer-referenced
    chunks (once a command exists to delete a brackup file from a target)

  - stop leaking temp files

  - doc fixes/additions

1.02 (may 22, 2007)

  - support for merging little files together into big chunks
    on the backup target.  aka "tail packing".  requires no changes
    to target drivers.  this should speed backups, as less network
    round-trips.  will also be cheaper, once Amazon starts charging
    per number of HTTP requests in June.

  - improved docs

1.01 (may 21, 2007)

  - lot of new/updated docs

1.00 (may 21, 2007)

  RELEASE NOTE: The author/maintainer of Brackup is finally happy now,
    and has 40 GB of data stored on Amazon, encrypted.  You can
    trust this now.  And the file formats aren't changing (or aren't
    changing without being compatible with old *.brackup/Amazon
    formats...)

  - track in meta header the default (most often occuring) modes for
    files and directories, then don't list those for each file/dir
    with those mode.  saves on disk space on *.brackup files

  - support 'noatime = 1' option on a source root, because atimes are
    often useless, so waste of space in metafile.

  - rename digestdb back to digestcache, now that it's purely a cache
    again.

  - fix memory leak in case where chunk exists on target, but local
    digest database was lost, and digest of chunk had to be recomputed.